force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Extended_ftest_Test_Failures__c.field-meta.xml
<CustomField>
    <fullName>Explain_Extended_ftest_Test_Failures__c</fullName>
    <label>Explain Extended ftest Test Failures</label>
    <type>TextArea</type>
</CustomField>