force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_High__c.field-meta.xml
<CustomField>
    <fullName>Explain_High__c</fullName>
    <label>Explain High Risk Perf Features</label>
    <type>TextArea</type>
</CustomField>