force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_High_TF_Fix_Rate__c.field-meta.xml
<CustomField>
    <fullName>Explain_High_TF_Fix_Rate__c</fullName>
    <label>Explain High TF Fix Rate</label>
    <length>225</length>
    <type>Text</type>
</CustomField>