force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_if_Biz_Sox_Not_Met__c.field-meta.xml
<CustomField>
    <fullName>Explain_if_Biz_Sox_Not_Met__c</fullName>
    <label>Explain if Biz SOX Not Met</label>
    <type>TextArea</type>
</CustomField>