force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_if_bug_count_is_high__c.field-meta.xml
<CustomField>
    <fullName>Explain_if_bug_count_is_high__c</fullName>
    <description>Bugs Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</description>
    <inlineHelpText>Bugs Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</inlineHelpText>
    <label>Explain if Bug Count is High</label>
    <type>TextArea</type>
</CustomField>