force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_if_IT_Infra_not_Met__c.field-meta.xml
<CustomField>
    <fullName>Explain_if_IT_Infra_not_Met__c</fullName>
    <description>IT Feature Freeze Criteria to explain if IT Infrastructure required is not setup, configured, tested or documented (if required for Apps).</description>
    <inlineHelpText>IT Feature Freeze Criteria to explain if IT Infrastructure required is not setup, configured, tested or documented (if required for Apps).</inlineHelpText>
    <label>Explain IT Infra not Met</label>
    <type>TextArea</type>
</CustomField>