force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_if_Not_Complete__c.field-meta.xml
<CustomField>
    <fullName>Explain_if_Not_Complete__c</fullName>
    <label>Explain if Not Complete</label>
    <type>TextArea</type>
</CustomField>