force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_if_not_trending_downward__c.field-meta.xml
<CustomField>
    <fullName>Explain_if_not_trending_downward__c</fullName>
    <description>P0/P1/P2 Bugs/TF Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</description>
    <inlineHelpText>P0/P1/P2 Bugs/TF Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</inlineHelpText>
    <label>Explain if not Trending Downward</label>
    <type>TextArea</type>
</CustomField>