force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_if_PerfEng_Requirements_not_Met__c.field-meta.xml
<CustomField>
    <fullName>Explain_if_PerfEng_Requirements_not_Met__c</fullName>
    <label>Explain if PerfEng Requirements not Met</label>
    <type>TextArea</type>
</CustomField>