force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_if_Regressions_Exist_on_Freeze__c.field-meta.xml
<CustomField>
    <fullName>Explain_if_Regressions_Exist_on_Freeze__c</fullName>
    <label>Explain if Regressions Exist on Freeze</label>
    <type>TextArea</type>
</CustomField>