force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_if_Scripts_not_Verified__c.field-meta.xml
<CustomField>
    <fullName>Explain_if_Scripts_not_Verified__c</fullName>
    <label>Explain if Scripts not Verified</label>
    <type>TextArea</type>
</CustomField>