force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_if_Solution_Swimlanes_not_Built__c.field-meta.xml
<CustomField>
    <fullName>Explain_if_Solution_Swimlanes_not_Built__c</fullName>
    <label>Explain if Solution Swimlanes not Built</label>
    <type>TextArea</type>
</CustomField>