force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_if_TF_Count_is_High__c.field-meta.xml
<CustomField>
    <fullName>Explain_if_TF_Count_is_High__c</fullName>
    <label>Explain if TF Count is High</label>
    <type>TextArea</type>
</CustomField>