force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_if_TF_not_Trending_Down__c.field-meta.xml
<CustomField>
    <fullName>Explain_if_TF_not_Trending_Down__c</fullName>
    <description>Explain if the Test Failure rate is not trending downward.</description>
    <inlineHelpText>Explain if the Test Failure rate is not trending downward.</inlineHelpText>
    <label>Explain if TF not Trending Down</label>
    <type>TextArea</type>
</CustomField>