force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_if_VAT_review_not_Complete__c.field-meta.xml
<CustomField>
    <fullName>Explain_if_VAT_review_not_Complete__c</fullName>
    <inlineHelpText>IT VAT architecture reviews, requirements and exceptions have been performed and noted.</inlineHelpText>
    <label>Explain if VAT review not Complete</label>
    <type>TextArea</type>
</CustomField>