force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_IT_Conversion_Plan_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Explain_IT_Conversion_Plan_Incomplete__c</fullName>
    <description>IT Feature Freeze Criteria to explain if data conversion plan has not been automated, tested, reviewed, validated or potentially performance tuned.</description>
    <inlineHelpText>IT Feature Freeze Criteria to explain if data conversion plan has not been automated, tested, reviewed, validated or potentially performance tuned.</inlineHelpText>
    <label>Explain IT Conversion Plan Incomplete</label>
    <type>TextArea</type>
</CustomField>