force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_IT_Prod_Support_Model_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Explain_IT_Prod_Support_Model_Incomplete__c</fullName>
    <description>IT Feature Freeze Criteria to explain if a production support model has not been documented, reviewed or signed off (Tier 1, Tier 2, etc.).</description>
    <inlineHelpText>IT Feature Freeze Criteria to explain if a production support model has not been documented, reviewed or signed off (Tier 1, Tier 2, etc.).</inlineHelpText>
    <label>Explain IT Prod Support Model Incomplete</label>
    <type>TextArea</type>
</CustomField>