force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_IT_Security_Reviews_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Explain_IT_Security_Reviews_Incomplete__c</fullName>
    <description>IT Freature Freeze Criteria to explain any Security Reviews, testing or fixes complete.</description>
    <inlineHelpText>IT Freature Freeze Criteria to explain any Security Reviews, testing or fixes complete.</inlineHelpText>
    <label>Explain IT Security Reviews Incomplete</label>
    <type>TextArea</type>
</CustomField>