force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_IT_VAT_Review_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Explain_IT_VAT_Review_Incomplete__c</fullName>
    <description>IT Feature Freeze Criteria to explain any IT VAT architecture reviews, requirements or exceptions that have not been performed and noted.</description>
    <inlineHelpText>IT Feature Freeze Criteria to explain any IT VAT architecture reviews, requirements or exceptions that have not been performed and noted.</inlineHelpText>
    <label>Explain IT VAT Review Incomplete</label>
    <type>TextArea</type>
</CustomField>