force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Java_Package_and_PL_SQL_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Explain_Java_Package_and_PL_SQL_Coverage__c</fullName>
    <description>Explain if the Java Package or PL/SQL Coverage is &lt; 20%</description>
    <inlineHelpText>Explain if the Java Package or PL/SQL Coverage is &lt; 20%</inlineHelpText>
    <label>Explain Java Package and PL/SQL Coverage</label>
    <type>TextArea</type>
</CustomField>