force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Num_P1_Bugs_TF_to_Fix_Verify__c.field-meta.xml
<CustomField>
    <fullName>Explain_Num_P1_Bugs_TF_to_Fix_Verify__c</fullName>
    <label>Explain Num P1 Bugs/TF to Fix/Verify</label>
    <type>TextArea</type>
</CustomField>