force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Open_Bugs__c.field-meta.xml
<CustomField>
    <fullName>Explain_Open_Bugs__c</fullName>
    <inlineHelpText>Explain Open P0, P1 &amp; P2 Bugs</inlineHelpText>
    <label>Explain Open Bugs</label>
    <type>TextArea</type>
</CustomField>