force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Open_Feature_Requests__c.field-meta.xml
<CustomField>
    <fullName>Explain_Open_Feature_Requests__c</fullName>
    <label>Explain Open Feature Requests</label>
    <type>TextArea</type>
</CustomField>