force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Open_Non_Deterministic_Test_NDT__c.field-meta.xml
<CustomField>
    <fullName>Explain_Open_Non_Deterministic_Test_NDT__c</fullName>
    <inlineHelpText>Explain Open Non Deterministic Test (NDT) Not Required for Sign-off</inlineHelpText>
    <label>Explain Open Non Deterministic Test</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>