force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Open_P012_Bugs__c.field-meta.xml
<CustomField>
    <fullName>Explain_Open_P012_Bugs__c</fullName>
    <inlineHelpText>P012 Bugs = Zero</inlineHelpText>
    <label>Explain Open P012 Bugs</label>
    <type>TextArea</type>
</CustomField>