force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Open_RCA_Bugs__c.field-meta.xml
<CustomField>
    <fullName>Explain_Open_RCA_Bugs__c</fullName>
    <inlineHelpText>All P0,1,2 Bugs from RCAs older than 1 month, *including* previous or current releases should be closed.</inlineHelpText>
    <label>Explain Open RCA Bugs</label>
    <type>TextArea</type>
</CustomField>