force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Open_RCA_Stories__c.field-meta.xml
<CustomField>
    <fullName>Explain_Open_RCA_Stories__c</fullName>
    <inlineHelpText>All User-stories from RCAs older than 1 month, must be closed or scheduled for a release or sprint</inlineHelpText>
    <label>Explain Open RCA Stories</label>
    <type>TextArea</type>
</CustomField>