force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Open_RCA_To_D__c.field-meta.xml
<CustomField>
    <fullName>Explain_Open_RCA_To_D__c</fullName>
    <inlineHelpText>All ToDos (all priorities) from RCAs older than 1 month, *including* previous or current releases should be closed.</inlineHelpText>
    <label>Explain Open RCA To Do&#39;s</label>
    <type>TextArea</type>
</CustomField>