force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Open_Regression__c.field-meta.xml
<CustomField>
    <fullName>Explain_Open_Regression__c</fullName>
    <inlineHelpText>Regressions = Zero</inlineHelpText>
    <label>Explain Open Regression</label>
    <type>TextArea</type>
</CustomField>