force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Open_Security_bugs__c.field-meta.xml
<CustomField>
    <fullName>Explain_Open_Security_bugs__c</fullName>
    <inlineHelpText>P012 Security Bugs are closed or approved by ProdSec in the release that is open at the time of their discovery.</inlineHelpText>
    <label>Explain Open Security bugs</label>
    <type>TextArea</type>
</CustomField>