force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Open_TF__c.field-meta.xml
<CustomField>
    <fullName>Explain_Open_TF__c</fullName>
    <inlineHelpText>TF on basic ftest, basic selenium &amp; utest = Zero
(Does not inc Flappers)</inlineHelpText>
    <label>Explain Open TF&#39;s</label>
    <type>TextArea</type>
</CustomField>