force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Open_User_Stories__c.field-meta.xml
<CustomField>
    <fullName>Explain_Open_User_Stories__c</fullName>
    <description>Number of Open User Stories – excluding “Release Sprint Theme” stories (0)</description>
    <inlineHelpText>Number of Open User Stories – excluding “Release Sprint Theme” stories (0)</inlineHelpText>
    <label>Explain Open User Stories</label>
    <type>TextArea</type>
</CustomField>