force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_P1_P2_Bugs_TF_1_wk_old__c.field-meta.xml
<CustomField>
    <fullName>Explain_P1_P2_Bugs_TF_1_wk_old__c</fullName>
    <label>Explain P1/P2 Bugs/TF &gt;1 wk old</label>
    <type>TextArea</type>
</CustomField>