force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Pending_Auto_Integrations__c.field-meta.xml
<CustomField>
    <fullName>Explain_Pending_Auto_Integrations__c</fullName>
    <label>Explain Pending Auto Integrations</label>
    <type>TextArea</type>
</CustomField>