force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Sprint_DOD_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Explain_Sprint_DOD_Criteria__c</fullName>
    <inlineHelpText>If not met, please explain</inlineHelpText>
    <label>Explain Sprint DOD Criteria</label>
    <type>TextArea</type>
</CustomField>