force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_TF_to_Fix__c.field-meta.xml
<CustomField>
    <fullName>Explain_TF_to_Fix__c</fullName>
    <description>Explain the number of Test Failures to Fix.</description>
    <inlineHelpText>Explain the number of Test Failures to Fix.</inlineHelpText>
    <label>Explain Test Failures to Fix</label>
    <type>TextArea</type>
</CustomField>