force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_TF_to_Fix_or_Verify_1_week_0__c.field-meta.xml
<CustomField>
    <fullName>Explain_TF_to_Fix_or_Verify_1_week_0__c</fullName>
    <description>Explain if Total Number of Test Failures to Fix or Verify more than 1 week old is &gt; 0</description>
    <inlineHelpText>Explain if Total Number of Test Failures to Fix or Verify more than 1 week old is &gt; 0</inlineHelpText>
    <label>Explain Test Failures  &gt;1 week</label>
    <type>TextArea</type>
</CustomField>