force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Features_Complete_and_DoD_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Features_Complete_and_DoD_Achieved__c</fullName>
    <inlineHelpText>Are all features complete and meeting the criteria of the Definition of Done?</inlineHelpText>
    <label>Feature Complete and DoD Achieved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>