force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Features_Enabled_within_24hrs__c.field-meta.xml
<CustomField>
    <fullName>Features_Enabled_within_24hrs__c</fullName>
    <inlineHelpText>Teams are required to confirm that all features will be enabled within 24 hrs of the Release</inlineHelpText>
    <label>Features Enabled within 24hrs of Release</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>