force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Freeze_Type__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freeze Type</label>
    <type>Text</type>
</CustomField>