force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/GUS_Signoff_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>GUS_Signoff_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GUS Signoff Confirmed</label>
    <type>Checkbox</type>
</CustomField>