force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/GUS_Signoff_Date__c.field-meta.xml
<CustomField>
    <fullName>GUS_Signoff_Date__c</fullName>
    <label>GUS Signoff Date</label>
    <type>Date</type>
</CustomField>