force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Is_the_work_behind_a_perm__c.field-meta.xml
<CustomField>
    <fullName>Is_the_work_behind_a_perm__c</fullName>
    <label>Is the work behind a perm?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>