force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/IT_Compliance_Met__c.field-meta.xml
<CustomField>
    <fullName>IT_Compliance_Met__c</fullName>
    <description>IT Feature Freeze Criteria to meet all legal, tax, regulatory, regional, business and IT SOX compliance.</description>
    <inlineHelpText>Confirm that all legal, tax, regulatory, regional, business and IT SOX compliance has been met for the features being released.</inlineHelpText>
    <label>IT Compliance Met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>