force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/IT_Rollback_Plan_Complete__c.field-meta.xml
<CustomField>
    <fullName>IT_Rollback_Plan_Complete__c</fullName>
    <description>IT Feature Freeze Criteria to ensure rollback and contingency plans have been documented, tested and are ready for IT VAT and CAB review.</description>
    <inlineHelpText>IT Feature Freeze Criteria to ensure rollback and contingency plans have been documented, tested and are ready for IT VAT and CAB review.</inlineHelpText>
    <label>IT Rollback Plan Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>