force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/IT_VAT_architecture_reviews_requirement__c.field-meta.xml
<CustomField>
    <fullName>IT_VAT_architecture_reviews_requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IT VAT architecture reviews, requirements and exceptions have been performed and noted.</description>
    <inlineHelpText>IT VAT architecture reviews, requirements and exceptions must be performed and noted.</inlineHelpText>
    <label>IT  VAT Architecture Review Completed</label>
    <type>Checkbox</type>
</CustomField>