force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/IT_VAT_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>IT_VAT_Review_Complete__c</fullName>
    <description>IT Feature Freeze Criteria to ensure IT VAT architecture reviews, requirements and exceptions have been performed and noted.</description>
    <inlineHelpText>IT VAT architecture reviews, requirements and exceptions have been performed and noted</inlineHelpText>
    <label>IT VAT Review Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>