force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/IT_VATQuestionnaire_Complete__c.field-meta.xml
<CustomField>
    <fullName>IT_VATQuestionnaire_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>IT VAT has performed a vendor assessment or waived</inlineHelpText>
    <label>IT VAT Questionnaire Complete</label>
    <type>Checkbox</type>
</CustomField>