force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Java_Package_PLSQL_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Java_Package_PLSQL_Coverage__c</fullName>
    <inlineHelpText>Percent code coverage for Java Packages and PL/SQL modules.  FF criterion is at least 20%.</inlineHelpText>
    <label># of Java Pkgs and PLSQL Pkgs &lt; 20%</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>